--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -12,22 +12,22 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background-color: var(--fb-background-color);
+  background-color: var(--rs-background-color);
 }
 
 main > *,
 header .wrapper {
-  max-width: var(--fb-size-max-width);
+  max-width: var(--rs-size-max-width);
   margin: auto;
 }
 
 h3.match-section-title {
   // TODO refactor border-b-[1px] pb-2 mb-2 to a utility class
-  @apply py-3 mx-5 border-b-[1px] text-center text-fb-color-text-3 tracking-widest;
+  @apply py-3 mx-5 border-b-[1px] text-center text-rs-color-text-3 tracking-widest;
 }
 
 p.no-data {
-  @apply text-fb-font-size-body-1 text-fb-color-text-3 text-center py-10;
+  @apply text-rs-font-size-body-1 text-rs-color-text-3 text-center py-10;
 }
 
 .animate-fade-in {
