style: update some text and border-color to orange * and disable eslint warning for header and footer selector

--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -23,7 +23,7 @@ header .wrapper {
 
 h3.match-section-title {
   // TODO refactor border-b-[1px] pb-2 mb-2 to a utility class
-  @apply py-3 mx-5 border-b-[1px] text-center text-rs-color-text-3 tracking-widest;
+  @apply py-3 mx-5 border-b-[1px] border-rs-color-orange text-center text-rs-color-text-3 tracking-widest;
 }
 
 p.no-data {
