--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -1,42 +1,4 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.elevation-classes();
-@include mat.app-background();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$reelscore-primary: mat.m2-define-palette(mat.$m2-grey-palette, 800, 300, 900);
-$reelscore-accent: mat.m2-define-palette(mat.$m2-green-palette, 800, 300, 900);
-
-// The warn palette is optional (defaults to red).
-$reelscore-warn: mat.m2-define-palette(mat.$m2-red-palette);
-
-$my-typography: mat.m2-define-typography-config();
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$reelscore-theme: mat.m2-define-light-theme(
-  (
-    color: (
-      primary: $reelscore-primary,
-      accent: $reelscore-accent,
-      warn: $reelscore-warn,
-    ),
-    typography: $my-typography,
-  )
-);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($reelscore-theme);
 
 :root {
   // --mat-select-enabled-trigger-text-color: var(--rs-color-white);
@@ -66,23 +28,35 @@ $reelscore-theme: mat.m2-define-light-theme(
   --mdc-icon-button-icon-color: var(--rs-button-text-color);
   --mdc-outlined-button-label-text-color: var(--rs-button-text-color);
   --mat-standard-button-toggle-state-layer-color: var(--rs-color-orange);
-}
 
-button.mdc-button {
-  --mdc-text-button-label-text-size: var(--rs-font-size-body-2);
-  --mat-text-button-horizontal-padding: 10px;
-  border: 1px solid var(--mat-standard-button-toggle-divider-color);
-}
+  // mat-button
+  --mdc-filled-button-container-shape: var(--rs-size-border-radius);
 
-button.mdc-button,
-button.mdc-icon-button {
-  &:not(mat-calendar-header *):not(.mat-mdc-button-disabled) {
-    background: var(--rs-button-bg-color);
-  }
+  // mat-select
+  @include mat.select-overrides(
+    (
+      panel-background-color: var(--rs-color-white),
+    )
+  );
+
+  // mat-menu
+  @include mat.menu-overrides(
+    (
+      container-color: var(--rs-color-white),
+      item-leading-spacing: 16px,
+      item-trailing-spacing: 16px,
+      item-label-text-weight: 400,
+    )
+  );
 }
 
 .mat-datepicker-content {
   border: 1px solid var(--mat-standard-button-toggle-divider-color);
+  --mat-datepicker-calendar-container-background-color: var(--rs-color-white);
+  --mat-datepicker-calendar-date-text-color: var(--rs-color-text-1);
+  --mat-datepicker-calendar-date-disabled-state-text-color: var(
+    --rs-color-text-2
+  );
 }
 
 .cdk-overlay-pane:not(.mat-mdc-select-panel-above) div.mat-mdc-select-panel {
@@ -106,9 +80,9 @@ mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   --mat-tab-header-active-label-text-color: var(--rs-color-orange);
   --mat-tab-header-inactive-label-text-color: var(--rs-color-text-2);
   --mat-tab-header-active-focus-label-text-color: var(--rs-color-orange);
-  --mat-tab-header-active-hover-label-text-color: var(--rs-color-white);
+  --mat-tab-header-active-hover-label-text-color: var(--rs-color-text-3);
   --mat-tab-header-active-focus-indicator-color: var(--rs-color-orange);
-  --mat-tab-header-active-hover-indicator-color: var(--rs-color-white);
+  --mat-tab-header-active-hover-indicator-color: var(--rs-color-text-3);
   --mdc-tab-indicator-active-indicator-color: var(--rs-color-orange);
 
   .mat-mdc-tab-header {
