--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -1,18 +1,38 @@
-@use 'root.scss';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+@use './theme-colors' as themeColors;
+
 @use 'material.scss';
+@use 'root.scss';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  height: 100%;
+html {
+  @include mat.theme(
+    (
+      color: (
+        theme-type: light,
+        primary: themeColors.$primary-palette,
+        tertiary: themeColors.$tertiary-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    ),
+    $overrides: (
+      primary: var(--rs-color-primary),
+      surface: var(--rs-color-secondary),
+      on-surface: var(--rs-color-text-1),
+      outline: var(--rs-border-color)
+    )
+  );
 }
+
 body {
-  margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background-color: var(--rs-background-color);
+  background: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
 }
 
 main > *,
