stylefix: deprecated container-shape * [WARNING] Token `container-shape` is deprecated. Please use one of the following alternatives: filled-container-shape, outlined-container-shape, protected-container-shape, text-container-shape [plugin angular-sass]

--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -31,7 +31,7 @@
 
   @include mat.button-overrides(
     (
-      container-shape: var(--rs-size-border-radius),
+      filled-container-shape: var(--rs-size-border-radius),
     )
   );
 
