build: root and tailwind vars for border-color 1 & 2

--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -25,7 +25,7 @@ html {
       primary: var(--rs-color-primary),
       surface: var(--rs-color-secondary),
       on-surface: var(--rs-color-text-1),
-      outline: var(--rs-border-color)
+      outline: var(--rs-border-color-1)
     )
   );
 }
