--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -13,7 +13,8 @@
 
   --rs-button-text-color: var(--rs-color-text-3);
   --rs-button-bg-color: var(--rs-color-orange);
-  --rs-border-color: #e5e7eb;
+  --rs-border-color-1: #e5e7eb;
+  --rs-border-color-2: var(--rs-color-text-2);
 
   /* Font-sizes */
   --rs-font-size-title: 24px;
